[tool.poetry]
name = "calendly-cli"
version = "0.1.0"
description = ""
authors = ["Michael Bianco <mike@mikebian.co>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
PyCalendly = "^1.0.0"
python-dotenv = "^1.0.1"
pytz = "^2024.1"

[tool.poetry.dev-dependencies]
ipython = "^8.12.3"
ipdb = "^0.13.13"
colorama = "^0.4.6"
black = "^24.8.0"
pylint = "^3.2.6"
isort = "^5.13.2"
rich = "^13.7.1"
docrepr = "^0.2.0"
# try out pdbr https://github.com/cansarigol/pdbr

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=150
target-version=['py39']

[tool.isort]
profile = "black"
multi_line_output = 3